[workspace]
resolver = "2"
members = [
  "program",
  "openbook-dex-dep/assert-owner",
  "openbook-dex-dep/common",
  "openbook-dex-dep/dex",
  "openbook-dex-dep/dex/crank",
  "openbook-dex-dep/dex/permissioned",
  "openbook-dex-dep/dex/fuzz",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
