# Note: This crate must be built using do.sh

[package]
name = "raydium_amm"
version = "0.3.1"
description = "Raydium AMM"
authors = ["Raydium Maintainers "]
repository = "https://github.com/raydium-io/raydium-amm"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = ["serum_dex/no-entrypoint"]
program = ["serum_dex/program", "serum_dex/no-entrypoint"]
default = ["program"]
client = ["serum_dex/client"]
devnet = []
testnet = []

[lib]
name = "raydium_amm"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=2.1.0"
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", features = [
    "no-entrypoint",
    "program",
] }
solana-security-txt = "1.1.1"
serde_json = { version = "1.0.56" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3.3" }
base64 = "0.13.0"
arrayref = "0.3.6"
arrform = { git = "https://github.com/raydium-io/arrform" }
num-derive = "0.3"
num-traits = "0.2.12"
bytemuck = { version = "1.4.0" }
safe-transmute = "0.11.0"
thiserror = "1.0.20"
uint = "0.10.0"

[dev-dependencies]
bumpalo = { version = "3.4.0", features = ["collections"] }
proptest = "1.6"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
