# Note: This crate must be built using do.sh

[package]
name = "raydium_amm"
version = "0.3.1"
description = "Raydium AMM: Automated Market Maker for the Solana ecosystem."
authors = ["Raydium Maintainers "]
repository = "https://github.com/raydium-io/raydium-amm"
license = "Apache-2.0"
edition = "2021"

[features]
# Feature for client-side tools and tests; excludes the main program entry point.
no-entrypoint = ["serum_dex/no-entrypoint"]

# Feature for building the on-chain Solana program.
# Note: This enables both 'program' and 'no-entrypoint' features in serum_dex, 
# which is required by how openbook-dex handles its build structure.
program = ["serum_dex/program", "serum_dex/no-entrypoint"]
default = ["program"]

# Feature for client applications that interact with the program.
client = ["serum_dex/client"]

# Environment-specific features
devnet = []
testnet = []

[lib]
name = "raydium_amm"
# cdylib is required for building a Solana BPF program.
crate-type = ["cdylib", "lib"]

# --- Core Solana Dependencies ---
[dependencies]
# Exact versions are pinned for stability and security in the on-chain environment.
solana-program = "=2.1.0"
spl-token = { version = "=7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"

# External Git Dependency for Serum/Openbook DEX
# IMPORTANT: Specifying a 'rev' (commit hash) is highly recommended for stability and reproducibility.
# Using 'rev = "..."' ensures the build uses a fixed, auditable version of the fork.
serum_dex = { 
    version = "0.5.10", 
    git = "https://github.com/raydium-io/openbook-dex", 
    features = ["no-entrypoint", "program"] 
}

# --- Serialization and Utility Libraries ---
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.56" }
bincode = { version = "1.3.3" }
base64 = "0.13.0"
thiserror = "1.0.20"

# --- Numerical and Data Utilities ---
uint = "0.10.0"
num-derive = "0.3"
num-traits = "0.2.12"

# --- Memory and Array Handling ---
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }
safe-transmute = "0.11.0"
# Hardcoded Git Dependency. Recommend adding 'rev = "..."' here as well.
arrform = { git = "https://github.com/raydium-io/arrform" }


# --- Development Dependencies ---
[dev-dependencies]
bumpalo = { version = "3.4.0", features = ["collections"] }
proptest = "1.6"

# --- Release Profile Configuration for On-Chain Program (BPF) ---
[profile.release]
# Aggressive optimization for size and speed (essential for BPF programs).
lto = "fat" # Link Time Optimization: Maximizes optimization across the entire crate.
codegen-units = 1 # Single compilation unit: Best code generation, slower compilation.
panic = "abort" # Abort on panic: Reduces binary size and avoids unwinding overhead.
overflow-checks = true # Security feature: Checks for integer overflows even in release builds.

# Override for the build script itself (less critical, but kept for consistency)
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
